<resources>
    <string name="app_name">AR learning 学びましょう</string>
    <string name="button">Button</string>
    <string name="User_Register_name">User Register</string>
    <string name="ar_page">AR page</string>
    <string name="main">main</string>
    <string name="sign_in">sign in</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="welcome_back">Welcome back</string>
    <string name="register">Register</string>
    <string name="Achievements">Achievements</string>
    <string name="start">Start</string>
    <string name="srs">SRS</string>
    <string name="welcome_img">Welcome img</string>
    <string name="start_ar">start AR</string>
    <string name="image_per_level">Image per level</string>
    <string name="wordlist">WordList</string>
    <string name="UserInfo">UserInfo</string>
</resources>